# enlace

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/: CLAUDE.md
.claude/skills/enlace/: SKILL.md
.claude/skills/enlace-dev/: SKILL.md
_modules/: enlace.html  index.html
_modules/enlace/: __main__.html  base.html  compose.html  diagnose.html  discover.html  doctor.html  frontend.html  proxy.html  serve.html  supervise.html  util.html
_modules/enlace/auth/: cookies.html  middleware.html  passwords.html  sessions.html
_modules/enlace/stores/: backends.html  middleware.html  prefixed.html  validation.html
_modules/enlace/tests/: test_passwords.html  (+3 more)
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: enlace.rst.txt
enlace/: __init__.py  __main__.py  base.py  compose.py  diagnose.py  discover.py  doctor.py  frontend.py  proxy.py  serve.py  supervise.py  util.py
enlace/auth/: __init__.py  middleware.py  oauth.py  routes.py
enlace/stores/: __init__.py  middleware.py  prefixed.py
enlace/tests/: conftest.py  test_auth_failfast.py  test_auth_middleware.py  test_base.py  test_base_auth_config.py  test_compose.py  test_csrf.py  test_diagnose_auth.py  test_discover.py  test_doctor.py  test_oauth.py  test_passwords.py  test_prefixed_store.py  test_sessions.py  test_store_middleware.py  test_supervise.py
misc/docs/: AUTH_DEPLOYMENT_GAPS.md  Enlace Generalization Plan- From ASGI Compositor to Process Orchestrator.md  Process orchestration and multi-backend composition for enlace.md  asgi_composition__ASGI_composition_and_dynamic_sub_application_mounting_in_FastAPI_or_Starlette.md  audit_backend_generality.md  auth_cross_cutting__Authentication_and_Authorization_as_Cross_Cutting_Concerns.md  convention_over_configuration__Convention_over_Configuration_in_Python.md  deployment_observability__Deployment_process_management_hot_reload_and_observability_for_a_personal_app_platform.md  design_principles__Zero_coupling_and_standalone_preservation_in_multi_app_composition.md  enlace_spec.md  frontend_serving__Multi_app_frontend_serving_under_a_single_domain.md  plan__auth_and_stores_phase_2_3.md  user_data_persistence__Multi_app_user_data_persistence_with_repository_abstractions.md
module_docs/: enlace.html
module_docs/enlace/: __main__.html  auth.html  base.html  compose.html  diagnose.html  discover.html  doctor.html  frontend.html  proxy.html  serve.html  stores.html  supervise.html  util.html
tests/: test_auth_e2e.py  test_platform.py  test_standalone_preservation.py
(+70 files in other folders)
