[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enlace"
version = "0.0.1"
description = "Compose, serve, and deploy multiple web apps from a single codebase"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["web", "platform", "fastapi", "asgi", "multi-app", "composition"]
authors = [{ name = "Thor Whalen" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "argh>=0.31.0",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/i2mint/enlace"

[project.scripts]
enlace = "enlace.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["enlace/tests", "tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D100"]
ignore = ["D203"]

[project.entry-points."skill.skill_packs"]
enlace = "enlace:skills_dir"

[tool.hatch.build.targets.wheel]
packages = ["enlace"]

[tool.hatch.build.targets.wheel.force-include]
"enlace/data" = "enlace/data"
