[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enlace"
version = "0.1.2"
description = "Serve all your web apps from a single process — they don't import it, they don't know it's there"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["web", "platform", "fastapi", "asgi", "multi-app", "composition"]
authors = [{ name = "Thor Whalen" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "argh>=0.31.0",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/i2mint/enlace"

[project.scripts]
enlace = "enlace.__main__:main"

[project.optional-dependencies]
process = ["httpx>=0.24.0"]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["enlace/tests", "tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D100"]
ignore = ["D203"]

[tool.ruff.lint.per-file-ignores]
"enlace/diagnose.py" = ["E501"]  # Long lines in diagnostic prose strings
"tests/test_standalone_preservation.py" = ["E501"]

[project.entry-points."skill.skill_packs"]
enlace = "enlace:skills_dir"

[tool.wads.ci]
installer = "uv"

[tool.wads.ci.testing]
python_versions = ["3.10", "3.12"]
coverage_enabled = false
test_on_windows = false

[tool.hatch.build.targets.wheel]
packages = ["enlace"]
